--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-cli": "0.1.11",
-    "grunt-contrib-clean":"~0.6.0",
+    "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jasmine": "^1.0.0",
     "grunt-contrib-sass": "0.7.4",
     "grunt-shell": "^1.1.2",
-    "jquery": "~1.11.3"
+    "jquery": "~1.11.3",
+    "standard": "^8.0.0"
   },
   "scripts": {
-    "test": "node_modules/.bin/grunt test"
+    "test": "npm run lint && grunt test",
+    "lint": "standard"
+  },
+  "standard": {
+    "ignore": [
+      "/javascripts/vendor"
+    ]
   }
 }
