--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jasmine": "^1.0.0",
     "grunt-contrib-sass": "0.7.4",
-    "grunt-shell": "^1.1.2",
     "jquery": "~1.11.3",
     "standard": "^8.0.0"
   },
   "scripts": {
-    "test": "npm run lint && grunt test",
-    "lint": "standard"
+    "test": "grunt test && npm run lint",
+    "lint": "standard && bundle && bundle exec govuk-lint-sass stylesheets"
   },
   "standard": {
     "ignore": [
